--- a/.vscode/交互式 - draftingyue.py.ipynb
+++ b/.vscode/交互式 - draftingyue.py.ipynb
@@ -6,13 +6,26 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "isInteractiveWindowMessageCell": true
+   },
+   "source": [
+    "没有连接的内核"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "env",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "name": "python",
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
